[gd_scene load_steps=6 format=3 uid="uid://chv4761a20kmb"]

[ext_resource type="Script" uid="uid://d2rr6f64my7y6" path="res://objects/lightwallseg.gd" id="1_8kgsn"]
[ext_resource type="Material" uid="uid://y5kioappetuf" path="res://materials/slw_blue1.tres" id="2_40qno"]
[ext_resource type="Script" uid="uid://biucfvq0y528u" path="res://objects/da_good_box.gd" id="3_40qno"]

[sub_resource type="BoxShape3D" id="BoxShape3D_qkq1s"]
size = Vector3(0.25, 1.1, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_cwhoa"]
size = Vector3(0.2, 1, 0.5)

[node name="LightWallSeg" type="Node3D"]
script = ExtResource("1_8kgsn")

[node name="LightArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 3072
collision_mask = 3072

[node name="KillBox" type="CollisionShape3D" parent="LightArea"]
shape = SubResource("BoxShape3D_qkq1s")

[node name="Shell" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="DaGoodBox" type="MeshInstance3D" parent="Shell"]
mesh = SubResource("BoxMesh_cwhoa")
surface_material_override/0 = ExtResource("2_40qno")
script = ExtResource("3_40qno")

[node name="DelTimer" type="Timer" parent="."]
wait_time = 25.0
one_shot = true
autostart = true

[node name="LightOsci" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="LightArea" to="." method="_on_lightarea_body_entered"]
[connection signal="timeout" from="DelTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="LightOsci" to="Shell/DaGoodBox" method="_on_light_osci_timeout"]
